--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "start": "vite preview",
-  "vercel-build": "vite build"
-}
-,
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview",
+    "vercel-build": "vite build"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -19,6 +18,7 @@
     "@react-pdf/renderer": "^4.2.2",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
